# ESP32-C6-Touch-AMOLED-1.8

./: .gitignore  01-official-docs.md  02-esp32-c6-chip-reference.md  03-community-projects-and-resources.md  04-display-touch-drivers.md  05-development-setup-guide.md  06-comparison-with-lcd147-project.md  07-complete-gpio-and-io-map.md  08-i2c-bus-and-peripherals.md  10-rtc-audio-peripherals.md  11-mcp-canvas-reference-architecture.md  12-amoled-mcp-canvas-strategy.md  13-implementation-plan.md  14-crying-detection-research.md  15-power-saving-strategies.md  16-toddler-product-research.md  17-toddler-project-ideas.md  18-sd-display-spi-sharing.md  CLAUDE.md  README.md
.claude/commands/: build.md  display-ui.md  flash.md  hardware-specs.md  mcp-tool-design.md  new-project.md  peripherals.md
.claude/skills/nursery-rhyme-music/: SKILL.md
.claude/skills/nursery-rhyme-music/scripts/: audit_songs.py
docs/: blog-baby-cry-detection-dsp.md  esp-idf-cloud-setup.md
docs/board-research/: 00-comprehensive-hardware-architecture.md  00-perplexity-overview.md  05-development-setup-guide.md  06-comparison-with-lcd147-project.md  07-complete-gpio-and-io-map.md  10-rtc-audio-peripherals.md  15-power-saving-strategies.md  17-toddler-project-ideas.md  README.md
docs/reference/: nursery_rhyme_scores.md
docs/research/: ESP32-C3 Bitchat Protocol Interaction.md  ESP32-C3 as a BitChat node: a full technical feasibility analysis.md
docs/waveshare-support/: 235269-sd-display-spi-sharing.md  README.md
projects/11_mcp_canvas/: CMakeLists.txt  README.md  sdkconfig.defaults.template
projects/11_mcp_canvas/main/: CMakeLists.txt  Kconfig.projbuild  drawing_engine.c  drawing_engine.h  idf_component.yml  main.c  mcp_server.c  mcp_server.h  snapshot.c  snapshot.h  ui_display.c  ui_display.h
projects/12_baby_cry_dsp/: CMakeLists.txt  DETECTION_METHODOLOGY.md  README.md  sdkconfig.defaults.template
projects/12_baby_cry_dsp/main/: CMakeLists.txt  Kconfig.projbuild  audio_capture.c  audio_capture.h  cry_detector.c  cry_detector.h  idf_component.yml  main.c  ntp_time.c  ntp_time.h  sd_logger.c  sd_logger.h  ui_monitor.c  ui_monitor.h
projects/13_baby_cry_vad/: CMakeLists.txt  README.md  sdkconfig.defaults.template
projects/13_baby_cry_vad/main/: CMakeLists.txt  Kconfig.projbuild  audio_capture.c  cry_detector.c  cry_detector.h  main.c  ui_monitor.c  ui_monitor.h  vad_filter.c  vad_filter.h
projects/14_sensory_play/: CMakeLists.txt  IMPLEMENTATION_PLAN.md
projects/14_sensory_play/main/: CMakeLists.txt  audio_output.c  audio_output.h  imu_manager.c  imu_manager.h  main.c  mode_dance.c  mode_dance.h  mode_manager.c  mode_manager.h  mode_music.c  mode_music.h  mode_snow_globe.c  mode_snow_globe.h  particle_engine.c  particle_engine.h
projects/15_nursery_rhymes/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
projects/15_nursery_rhymes/docs/: 01_twinkle_twinkle.md  02_mary_had_a_lamb.md  03_baa_baa_black_sheep.md  04_london_bridge.md  05_row_your_boat.md  06_jack_and_jill.md  07_humpty_dumpty.md  08_itsy_bitsy_spider.md  09_old_macdonald.md  10_hickory_dickory.md  11_three_blind_mice.md  12_hot_cross_buns.md  13_frere_jacques.md  14_yankee_doodle.md  15_pop_goes_weasel.md  16_rock_a_bye_baby.md  17_hush_little_baby.md  18_wheels_on_the_bus.md  19_head_shoulders.md  20_happy_and_you_know_it.md  WHITE_NOISE_IMPLEMENTATION_PLAN.md  WHITE_NOISE_RESEARCH.md  WHITE_NOISE_UI_PLAN.md
projects/15_nursery_rhymes/main/: CMakeLists.txt  Kconfig.projbuild  audio_player.c  audio_player.h  idf_component.yml  main.c  noise_player.c  noise_player.h  song_data.c  song_data.h  ui.c  ui.h  ui_noise.c  ui_noise.h
projects/16_bitchat_relay/: CMakeLists.txt  blog-post.md  partitions.csv  sdkconfig.defaults.template
projects/16_bitchat_relay/main/: CMakeLists.txt  ble_relay.c  ble_relay.h  main.c  packet_buffer.c  packet_buffer.h  sd_logger.c  sd_logger.h  telemetry.c  telemetry.h  ui_dashboard.c  ui_dashboard.h
projects/17_pixelpet/: .gitignore  CMakeLists.txt  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_V2.md  TESTING_NOTES.md  partitions.csv  sdkconfig.defaults.template
projects/17_pixelpet/main/: CMakeLists.txt  Kconfig.projbuild  asset_loader.c  asset_loader.h  audio_jingles.c  audio_jingles.h  audio_output.c  daily_quests.c  daily_quests.h  fishbowl.c  fishbowl.h  idf_component.yml  idle_scheduler.c  idle_scheduler.h  imu_manager.c  intro_screens.c  intro_screens.h  main.c  minigame_catch.c  minigame_catch.h  pet_renderer.c  pet_renderer.h  pet_save.c  pet_save.h  pet_state.c  pet_state.h  power_manager.c  power_manager.h  rtc_manager.c  rtc_manager.h  species.c  species.h  stat_engine.c  stat_engine.h  story_card.c  story_card.h  ui_screens.c  ui_screens.h
projects/17_pixelpet/research/: lvgl_sprite_animation.md  virtual_pet_animation_references.md
shared/components/amoled_driver/: CMakeLists.txt  idf_component.yml
shared/components/amoled_driver/include/: amoled.h  amoled_lvgl.h  amoled_touch.h
shared/components/amoled_driver/src/: amoled.c  amoled_lvgl.c  amoled_touch.c
tools/sprite_factory/: README.md  build_assets.py  primitives.py
tools/sprite_factory/palettes/: aqua.yml  main.yml
tools/sprite_factory/sprites/bodies/: blob_dead.yml  blob_eat.yml  blob_happy.yml  blob_idle.yml  blob_sad.yml  blob_sick.yml  blob_sleeping.yml  blob_stretch.yml  blob_yawn.yml
tools/sprite_factory/sprites/food/: apple.yml  bread.yml  cake.yml  fish.yml
tools/sprite_factory/sprites/lifecycle/: egg.yml
tools/sprite_factory/sprites/medicine/: pill.yml  soap.yml
tools/sprite_factory/sprites/particles/: bubble.yml  dust.yml  exclaim.yml  heart.yml  question.yml  sparkle.yml  sparkle_burst.yml  star.yml  sweat.yml  zzz.yml
